ref(setup): add extra require

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,10 @@ tests_require =
     pytest>=5.4.2
     pytest-cov>=2.8.1
 
+[options.extras_require]
+click =
+    click>=7.0
+
 [aliases]
 test = pytest
 
@@ -35,3 +39,4 @@ source =
 
 [coverage:report]
 show_missing = True
+
